--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Página Pessoal de Izabele </title>
+<title>Página Pessoal de Izabele</title>
 </head>
+<body>
+<header>
+<h1>Izabele Levandovski Chaves</h1>
+<nav>
+<ul>
+<li><a href="#sobre">Sobre mim</a></li>
+<li><a href="projetos">Projetos</a></li>
+<li><a href="#contato">Contato</a></li>
+</ul>
+</nav>
+</header>
+<sections
+</body>
 </html>
