--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 <nav>
 <ul>
 <li><a href="#sobre">Sobre mim</a></li>
-<li><a href="projetos">Projetos</a></li>
+<li><a href="#projetos">Projetos</a></li>
 <li><a href="#contato">Contato</a></li>
 </ul>
 </nav>
 </header>
-<sections></sections>
+<sections id="sobre">
+<h2>Sobre Mim</h2>
+<p>Eu sou a Izabele Chaves, tenho 13 anos e estudo no Paulo Penso</p>
+</sections>
+<sections id="projetos">
+ <h2>Projetos</h2>
+ <p>Eu sou a Izabele Chaves, tenho 13 anos e estuenso</p> </sections>
 </body>
 </html>
