--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 </sections>
 <sections id="projetos">
  <h2>Projetos</h2>
- <p>Eu sou a Izabele Chaves, tenho 13 anos e estuenso</p> </sections>
+ <p>Eu sou a Izabele Chaves, tenho 13 anos e estudo no Paulo Penso</p>
+</sections>
 </body>
 </html>
+
