--- a/index.html
+++ b/index.html
@@ -3,6 +3,55 @@
 <head>
 <title>Página Pessoal de Izabele</title>
 </head>
+<style>
+*{
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
+body{
+font-family: Arial, Helvetica, sans-serif;
+background-color: #f4f4f4;
+color: #333;
+line-height: 1.6;
+padding: 20px;
+}
+header{
+background-color: #333;
+color: #fff;
+padding: 10px 0;
+text-align: center;
+}
+header h1{
+margin-bottom: 10px;
+}
+nav ul{
+list-style: none;
+}
+nav ul li{
+display: inline;
+margin: 0 10px;
+}
+nav ul li a{
+color: #fff;
+text-decoration: none;
+}
+section{
+margin: 20px 0;
+}
+section#sobre,
+section#projetos,
+section#contato {
+background-color: #fff;
+padding: 20px;
+border-radius: 8px;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+footer{
+text-align: center;
+margin-top: 20px;
+}
+</style>
 <body>
 <header>
 <h1>Izabele Levandovski Chaves</h1>
@@ -14,14 +63,27 @@
 </ul>
 </nav>
 </header>
-<sections id="sobre">
+<section id="sobre">
 <h2>Sobre Mim</h2>
 <p>Eu sou a Izabele Chaves, tenho 13 anos e estudo no Paulo Penso</p>
-</sections>
-<sections id="projetos">
+</section>
+<section id="projetos">
  <h2>Projetos</h2>
- <p>Eu sou a Izabele   Chaves, tenho 13 anos e estudo no Paulo Penso</p>
-</sections>
+ <ul>
+<li>Projeto 1: <a href="#">Descrição do projeto 1</a></li>
+<li>Projeto 2: <a href="#">Descrição do projeto 2</a></li>
+<li>Projeto 3: <a href="#">Descrição do projeto 3</a></li>
+<li>Projeto 4: <a href="#">Descrição do projeto 4</a></li>
+<li>Projeto 5: <a href="#">Descrição do projeto 5</a></li>
+ </ul>
+</section>
+<section id="contato">
+<h2>Contato</h2>
+<p>Entre em contato comigo via <a href="mailto:izabele_chaves@estudante.sesisenai.org.br">izabele_chaves@estudante.sesisenai.org.br</a></p>
+</section>
+<footer>
+<p>&copy; @2025 Izabele</p>
+</footer>
 </body>
 </html>
 
