--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ margin-top: 20px;
  </ul>
 </section>
 <section id="contato">
-<h2>Contato</h2>
+<h2>contato</h2>
 <p>Entre em contato comigo via <a href="mailto:izabele_chaves@estudante.sesisenai.org.br">izabele_chaves@estudante.sesisenai.org.br</a></p>
 </section>
 <footer>
