--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
  <h2>Projetos</h2>
  <ul>
 <li>Projeto 1: <a href="/projeto1.html">Projeto Tabela com Imagem </a></li>
-<li>Projeto 2: <a href="#">Descrição do projeto 2</a></li>
+<li>Projeto 2: <a href="/projeto2.html">Descrição do projeto 2</a></li>
 <li>Projeto 3: <a href="#">Descrição do projeto 3</a></li>
 <li>Projeto 4: <a href="#">Descrição do projeto 4</a></li>
 <li>Projeto 5: <a href="#">Descrição do projeto 5</a></li>
