--- a/formulario.html
+++ b/formulario.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
 <head>
-<meta charset="=UTF-8">
-<meta name="viewport" content="width=device=width,initial-scale=1,0">
-<link rel="stylesheet" href="/styleform.css">
+<link rel="stylesheet" href="static/#styleform.css">
 <title>Formulario</title>
 </head>
 <body>
@@ -16,11 +14,11 @@
 <label for="">Cor preferida</label>
 <input type="color">
 <label for="">Email:</label>
-<input type="""E-mail">
-<label for="">Senha::</label>
+<input type="E-mail">
+<label for="">Senha:</label>
 <input type="Password">
 <label for="">data de nascimento</label>
-<input type="date"
+<input type="date">
 </form>
 </body>
 </html>
