--- a/formulario.html
+++ b/formulario.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="static/#styleform.css">
+<link rel="stylesheet" href="static/styleform.css">
 <title>Formulario</title>
 </head>
 <body>
@@ -14,11 +14,12 @@
 <label for="">Cor preferida</label>
 <input type="color">
 <label for="">Email:</label>
-<input type="E-mail">
+<input type="email">
 <label for="">Senha:</label>
 <input type="Password">
 <label for="">data de nascimento</label>
 <input type="date">
+<input type="submit" value="cadastrar">
 </form>
 </body>
 </html>
