--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
  <h2>Projetos</h2>
  <ul>
 <li>Projeto 1: <a href="/projeto1.html">Projeto Tabela com Imagem </a></li>
-<li>Projeto 2: <a href="/projeto2.html">meusanimaisfavoritos</a></li>
-<li>Projeto 3: <a href="/formulario.html">Formulario</a></li>
+<li>Projeto 2: <a href="/projeto2.html">Meus Animais Favoritos</a></li>
+<li>Projeto 3: <a href="/formulario.html">Meu Primeiro Formulario</a></li>
 <li>Projeto 4: <a href="#">Descrição do projeto 4</a></li>
 <li>Projeto 5: <a href="#">Descrição do projeto 5</a></li>
  </ul>
